resourses ans code  path changed